# resting-screen

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Resource.h  Screen.aps  Screen.cpp  Screen.rc  Screen.sln  Screen.vcxproj  Screen.vcxproj.filters  build.bat  config.ini  framework.h  setup.iss  setup_x64.iss  setup_x86.iss
enc_temp_folder/610be58c6e2b8e0f2a970f7508bcc45/: README.md
include/: pch.h
ini/: INIReader.cpp
setup/: License.txt  setup.bat  setup_x64.iss  setup_x86.iss
src/: include.h  main.cpp
src/assets/: resource.aps  resource.rc
